# rain.interpreter

./: .coderabbit.yaml  .devcontainer.json  .env.example  .envrc  .gas-snapshot  .gitignore  .gitmodules  404.html  AUDIT.md  CLAUDE.md  Cargo.toml  README.md  REUSE.toml  TESTING.md  flake.nix  foundry.toml  generate_csv.sh  index.html  output.csv  print.html  searchindex.js  searchindex.json  slither.config.json  test.rain
.cargo/: config.toml
.github/workflows/: ci-deploy.yaml  docs.yaml  fn-selectors.yaml  git-clean.yaml  manual-rs-release.yml  manual-sol-artifacts.yaml  pr-assessment.yaml  qakit-slither.yaml  qakit-test.yaml  rainix.yaml  slither.yaml  snapshot.yaml  subgraph.yaml  test-rs.yaml  test.yaml
LICENSES/: LicenseRef-DCL-1.0.txt
audit/: known-false-positives.md
audit/2026-02-17-03/: pass3-triage.md  pass4-triage.md  triage.md
audit/2026-03-01-01/: triage.md
audit/2026-03-04-01/: triage.md
audit/2026-03-07-01/: triage.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/cli/: mod.rs
cli/src/cli/eval2/: mod.rs
cli/src/examples/: deploy_eval2.rs
cli/src/interpreter/: mod.rs  registry.rs
cli/src/interpreter/abi/: IExpressionDeployerV3.json  IInterpreterStoreV1.json  IInterpreterV1.json
cli/src/interpreter/deployer/: mod.rs
cli/src/interpreter/rust_evm/: mod.rs
cli/src/interpreter/store/: mod.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: execute.rs  fork.rs  lib.rs  main.rs  output.rs
crates/cli/src/commands/: eval.rs  mod.rs  parse.rs
crates/dispair/: Cargo.toml
crates/dispair/src/: from_deployer.rs  lib.rs  parse.rs  test.rs
crates/env/: Cargo.toml
crates/eval/: Cargo.toml
crates/eval/src/: dispatch.rs  error.rs  eval.rs  fork.rs  lib.rs  namespace.rs  trace.rs
crates/eval/src/trace/: impls.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  v1.rs  v2.rs
crates/test_fixtures/: Cargo.toml
crates/test_fixtures/src/: lib.rs
crates/trace/: Cargo.toml
interpreter-rs/: .gitignore  Cargo.toml  flake.nix
interpreter-rs/abis/: IInterpreterStoreV1.json  IInterpreterV2.json  IParserV1.json  RainterpreterExpressionDeployerNPE2.json  RainterpreterNPE2.json  RainterpreterParserNPE2.json  RainterpreterStoreNPE2.json
interpreter-rs/src/: lib.rs  registry.rs
interpreter-rs/src/interpreter/: mod.rs
rinterpreter/: Cargo.toml  README.md  default.nix
rinterpreter/examples/: deploy_eval2.rs
rinterpreter/interpreter/: Cargo.toml
script/: BuildAuthoringMeta.sol  BuildPointers.sol  Deploy.sol  DeployDISPair.sol  DeployRainterpreterStore.sol  GetAuthoringMeta.sol
src/: LibCompile.sol  LibEval.sol  LibInterpreterState.sol  LibInterpreterStateDataContract.sol  LibNamespace.sol  LibOp.sol  LibParse.sol
src/abstract/: BaseRainterpreterExtern.sol  BaseRainterpreterExternNPE2.sol  BaseRainterpreterSubParser.sol  BaseRainterpreterSubParserNPE2.sol  DeployerDiscoverableMetaV1.sol  DeployerDiscoverableMetaV2.sol  DeployerDiscoverableMetaV3.sol  index.html
src/concrete/: LibInterpreterDeployConstants.sol  ProdRainterpreterExpressionDeployer.sol  Rainlang.sol  Rainterpreter.sol  RainterpreterDISPaiRegistry.sol  RainterpreterExpressionDeployer.sol  index.html  (+11 more)
subgraph/: .gitignore  Cargo.toml  README.md  flake.nix  package.json  schema.graphql  shell.nix  subgraph.template.yaml  tsconfig.json
subgraph/cli/: README.md  main.rs
subgraph/cli/cmd/: mod.rs
subgraph/cli/deploy/: mod.rs
subgraph/cli/subgraph/: mod.rs
subgraph/cli/utils/: mod.rs
subgraph/config/: ethereum.json  example.json  localhost.json  mumbai.json  polygon.json
subgraph/docker/: docker-compose.yaml
subgraph/src/: erc1820Registry.ts  interpreterCaller.ts  metaV1Emitter.ts  metav1.ts  rainterpreterExpressionDeployer.ts  utils.ts
subgraph/src/utils/: index.ts
subgraph/src/utils/contentMeta/: index.ts
subgraph/src/utils/entity/: create.ts  get.ts  remove.ts
subgraph/src/utils/extrospection/: index.ts
subgraph/src/utils/topics/: index.ts
subgraph/test/: entities.rs
subgraph/test/subgraph/: mod.rs
subgraph/test/subgraph/deploy/: mod.rs
subgraph/test/subgraph/query/: mod.rs  schema.json
subgraph/test/subgraph/query/content_meta_v1/: content_meta_v1.graphql  mod.rs
subgraph/test/subgraph/query/orderbook/: mod.rs  orderbook.graphql
subgraph/test/subgraph/query/rain_meta_v1/: mod.rs  rain_meta_v1.graphql
subgraph/test/subgraph/wait/: mod.rs  query.graphql  schema.json
subgraph/test/utils/: cbor.rs  events.rs  json_structs.rs  mod.rs  numbers.rs
subgraph/test/utils/deploy/: mod.rs
subgraph/test/utils/deploy/erc20_mock/: mod.rs
subgraph/test/utils/deploy/meta_getter/: mod.rs
subgraph/test/utils/deploy/orderbook/: mod.rs  setup.rs
subgraph/test/utils/deploy/registry1820/: mod.rs
subgraph/test/utils/deploy/touch_deployer/: mod.rs  setup.rs
subgraph/test/utils/gen_abigen/: mod.rs
subgraph/test/utils/setup/: mod.rs
subgraph/test/utils/transactions/: mod.rs
subgraph/tests/: entities.rs
subgraph/tests/utils/: mod.rs
subgraph/tests/utils/deploy/: mod.rs
subgraph/tests/utils/deploy/extrospection/: mod.rs
subgraph/tests/utils/deploy/registry1820/: mod.rs
subgraph/tests/utils/deploy/touch_deployer/: mod.rs
subgraph/tests/utils/setup/: mod.rs
subgraph/tests/utils/subgraph/: mod.rs
subgraph/tests/utils/subgraph/query/: mod.rs
subgraph/tests/utils/subgraph/query/expression_deployer/: mod.rs  query.graphql
subgraph/tests/utils/subgraph/wait/: mod.rs  query.graphql
task/: build-dispair-meta.sh  build-meta.sh  i9r-prelude.sh
test/: LibCompile.t.sol  LibEval.t.sol  LibEvalSlow.sol  LibInterpreterStateDataContract.t.sol  LibInterpreterStateDataContractSlow.sol  LibNamespace.t.sol  LibNamespaceSlow.sol  LibOp.t.sol  LibOpSlow.sol  LibParse.buildMeta.t.sol  LibParse.ctpop.t.sol  LibParse.empty.t.sol  LibParse.ignoredLHS.t.sol  LibParse.inputs.t.sol  LibParse.missingFinalSemi.t.sol  LibParse.namedLHS.t.sol  LibParse.t.sol  LibParse.unexpectedLHS.t.sol  LibParse.unexpectedRHS.t.sol  LibParse.wordsRHS.t.sol  TestForkParser.t.sol
(+1628 files in other folders)
