[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "CAL-1.0"
homepage = "https://github.com/rainprotocol/rain.interpreter"

[workspace.dependencies]
alloy = { version = "0.1.4", features = ["sol-types", "json", "json-abi"] }
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
ethers = { version = "2.0.14", default-features = false }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "72e44fb87c38b2acfa2b0b136fc1bc833f71e674" }
foundry-fork-db = "0.1.0"
foundry-block-explorers = "0.5.0"
revm = { version = "10.0.0", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
] }
serde = "1.0.160"
serde_bytes = "0.11.9"
serde_json = "1.0.112"
thiserror = "1.0.56"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.17", features = ["json"] }
once_cell = "1.17.1"
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "f2e4fe4f8ba3773e4266c1911b531b0b22214cfb" }
rain-interpreter-env = { path = "crates/env" }
eyre = "0.6"
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error", rev = "fa0cc05a8dbf0f167a2392255a8b509309e9da46" }

[workspace.dependencies.rain_interpreter_parser]
path = "crates/parser"

[workspace.dependencies.rain_interpreter_dispair]
path = "crates/dispair"

[workspace.dependencies.rain_interpreter_bindings]
path = "crates/bindings"

[workspace.dependencies.rain-interpreter-eval]
path = "crates/eval"
