[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "CAL-1.0"
homepage = "https://github.com/rainprotocol/rain.interpreter"

[workspace.dependencies]
alloy = { version = "1.0.9", features = ["sol-types", "json", "json-abi"] }
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "ed86c645f037f1cc4e5c1583f074a7b2142c4f66" }
foundry-evm-core = { git = "https://github.com/foundry-rs/foundry", rev = "ed86c645f037f1cc4e5c1583f074a7b2142c4f66" }
foundry-fork-db = "0.15.0"
foundry-block-explorers = "0.18.0"
revm = { version = "24.0.1", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
] }
serde = "1.0.160"
serde_bytes = "0.11.9"
serde_json = "1.0.112"
thiserror = "1.0.56"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.17", features = ["json"] }
once_cell = "1.17.1"
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "bcc3a04394aefe191fef4ae8e6e94381a419c99a" }
eyre = "0.6"
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error", rev = "bf08b5ab305287fc49408a441d6375f35dc280db" }
wasm-bindgen-utils = "0.0.10"

[workspace.dependencies.rain_interpreter_parser]
path = "crates/parser"

[workspace.dependencies.rain_interpreter_dispair]
path = "crates/dispair"

[workspace.dependencies.rain_interpreter_bindings]
path = "crates/bindings"

[workspace.dependencies.rain-interpreter-eval]
path = "crates/eval"

[workspace.dependencies.rain_interpreter_test_fixtures]
path = "crates/test_fixtures"
