[package]
name = "rain_interpreter_cli"
version = "0.1.0"
edition = "2021"
license = "CAL-1.0"
description = "Rain Interpreter CLI."
homepage = "https://github.com/rainprotocol/rain.interpreter" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
tokio = { version = "1.28.0", features = ["full"] }
ethers = { version = "2.0.7", features = ["ethers-solc"] }
ethers-signers = { version = "2.0.8", features = ["ledger"] }
revm = { version = "3.5.0", features = ["ethersdb"] }
clap = { version = "4.2.5", features = ["cargo", "derive","env"] }
reqwest = { version = "0.11.17", features = ["json"] }
rust-bigint = "1.2.0"
serde = "1.0.160"
serde_bytes = "0.11.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde_json = "1.0.96"
hex = "0.4.3"