[package]
name = "interpreter-rs"
version = "0.1.0"
edition = "2021"
license = "CAL-1.0"
description = "Rain Interpreter Rust Crate."
homepage = "https://github.com/rainlanguage/rain.interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "40cc8cc54f7d36aa24147c937772600e5b119399" }

[lints.clippy]
all= "warn"