[package]
name = "interpreter-rs"
version = "0.1.0"
edition = "2021"
license = "CAL-1.0"
description = "Rain Interpreter Rust Crate."
homepage = "https://github.com/rainlanguage/rain.interpreter"

[dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
ethers = { version = "2.0", features = ["legacy"] }

[package.metadata.docs.rs]
all-features = true

