[package]
name = "subgraph"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "subgraph-cli"
path = "cli/main.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0.99"
serde = "1.0.160"
serde_bytes = "0.11.9"
anyhow = "1.0.70"
mustache = "0.9.0"
reqwest = { version = "0.11.17", features = ["json"] }
rust-bigint = "1.2.0"
graphql_client = "0.13.0"
web3 = "0.19.0"
ethers = { version = "2.0", features = ["legacy"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
colored = "2.0.4"
lazy_static = "1.4.0"
thiserror = "1.0.49"
once_cell = "1.18.0"
minicbor = "0.20.0"
tiny-keccak = "2.0.2"
bigdecimal = "0.4.2"
url = "2.4.1"

