[package]
name = "subgraph"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "subgraph-cli"
path = "cli/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


