[package]
name = "subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.70"
rain_cli_subgraph = { git = "https://github.com/rainlanguage/rain.subgraph.cli.git", rev = "9f2a89a1278fc131018d68c0943e98b7a34867fd" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
graphql_client = "0.13.0"
rust-bigint = "1.2.0"
serde = "1.0.193"
ethers = { version = "2.0", features = ["legacy"] }
reqwest = "0.11.22"
lazy_static = "1.4.0"
once_cell = "1.18.0"
hex = "0.4.3"
serde_json = "1.0.108"
subgraph_rust_setup_utils = { git = "https://github.com/rainlanguage/subgraph-rust-setup-utils.git", rev = "34b71c3545b4885f67822cb0c1861e77d1e9e617" }