[package]
name = "rain_interpreter_bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-sol-types = { version = "0.5.4", features = ["json"] }
alloy-primitives = "0.5.4"
