[package]
name = "rain-i9r-cli"
description = "Rain Interpreter CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain_interpreter_bindings = { workspace = true }
rain-interpreter-eval = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { version = "1.28.0", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ['env-filter'] }
alloy = { workspace = true }

[dev-dependencies]
rain_interpreter_test_fixtures = { workspace = true }