[package]
name = "rain-interpreter-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
alloy-primitives = {workspace = true}
rain_interpreter_bindings = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true }
foundry-evm = { workspace = true }
revm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
rain-interpreter-env = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
