[package]
name = "rain-interpreter-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
alloy = { workspace = true }
thiserror = { workspace = true }
rain_interpreter_bindings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
eyre = { workspace = true }
rain-error-decoding = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
foundry-evm = { workspace = true }
revm = { workspace = true }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tracing = { workspace = true }
rain_interpreter_test_fixtures = { workspace = true }