[package]
name = "rain_interpreter_parser"
description = "Rain Interpreter Parser Rust Crate."
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true

[dependencies]
alloy-ethers-typecast =  { workspace = true }
rain_interpreter_dispair = { workspace = true }
rain_interpreter_bindings = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
ethers = { workspace = true, features = [
  "legacy",
] }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.28.0", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.28.0", features = ["sync", "macros", "io-util", "rt", "time"] }
