[package]
name = "rain_interpreter_parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rain Interpreter Parser Rust Crate."
homepage.workspace = true

[dependencies]
alloy-ethers-typecast = { workspace = true }
rain_interpreter_dispair = { workspace = true }
rain_interpreter_bindings = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.28.0", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.28.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
